--- a/development/openstack-base-xenial-mitaka/bundle.yaml
+++ b/development/openstack-base-xenial-mitaka/bundle.yaml
@@ -216,6 +216,8 @@ services:
       enable-live-migration: true
       enable-resize: true
       migration-auth-type: ssh
+      # XXX: Workaround for https://bugs.launchpad.net/bugs/1567807
+      openstack-origin: distro-proposed
     to:
     - '1'
     - '2'
