Use temporary WIP charm rev for Mitaka and Newton
This is a work-around to allow consumption of proposed packages
on non-x86 architectures via the openstack-origin charm config
option.

Reference:
 - https://bugs.launchpad.net/charm-helpers/+bug/1611134

--- a/development/openstack-base-xenial-mitaka/bundle.yaml
+++ b/development/openstack-base-xenial-mitaka/bundle.yaml
@@ -210,7 +210,9 @@ services:
     annotations:
       gui-x: '250'
       gui-y: '250'
-    charm: cs:~openstack-charmers-next/xenial/nova-compute
+    #charm: cs:~openstack-charmers-next/xenial/nova-compute
+    # TEMP WIP for https://bugs.launchpad.net/charm-helpers/+bug/1611134
+    charm: cs:~1chb1n/nova-compute
     num_units: 3
     options:
       enable-live-migration: true
